crates/asm/src/snapshots/asm__tests__assemble.snap
---
source: crates/asm/src/lib.rs
expression: bc
---
[
    121,
    101,
    101,
    116,
    1,
    13,
    2,
    10,
    14,
    253,
    255,
]
