crates/asm/src/snapshots/asm__tests__back_and_front_refs.snap
---
source: crates/asm/src/lib.rs
expression: bc
---
[
    121,
    101,
    101,
    116,
    14,
    3,
    0,
    7,
    13,
    14,
    254,
    255,
]
